--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Babel==2.8.0
 beautifulsoup4==4.8.2
-Cython==0.29.15
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 gunicorn==20.0.4
@@ -8,8 +7,6 @@ html5lib==1.0.1
 Jinja2==2.11.1
 json5==0.9.1
 jsonschema==3.2.0
-numpy==1.18.1
-pandas==1.0.1
 path==13.1.0
 pathlib2==2.3.5
 pathtools==0.1.2
@@ -18,7 +15,6 @@ python-dateutil==2.8.1
 python-jsonrpc-server==0.3.4
 python-language-server==0.31.7
 PyYAML==5.3
-pyzmq==18.1.1
 requests==2.22.0
 SQLAlchemy==1.3.13
 unicodecsv==0.14.1
@@ -28,3 +24,4 @@ wcwidth==0.1.8
 webencodings==0.5.1
 Werkzeug==1.0.0
 widgetsnbextension==3.5.1
+plotly==4.6.0
